--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="NewPackageIvy" default="Compile Sources" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
+<project name="ExtendedHybridMiner" default="Compile Sources" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
 	<!-- set global properties for this build -->
 	<property environment="env" />
 	<property name="src" location="src" />
